# Django-Price-Manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RoomPriceGenie API.html  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
challange_definition/: README.md
django_price_manager/: gunicorn.conf.py  manage.py
django_price_manager/dashboard_service/: models.py  tasks.py  views.py
django_price_manager/dashboard_service/migrations/: 0001_initial.py
django_price_manager/data_provider/: models.py  serializers.py  tasks.py  views.py
django_price_manager/data_provider/migrations/: 0001_initial.py
django_price_manager/data_provider/tests/: test_models.py  test_tasks.py
django_price_manager/django_price_manager/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
django_price_manager/templates/: api_root.html
roompricegenie/: .env  celerybeat-schedule.db  dashboard_service_db.sqlite3  data_provider_db.sqlite3  gunicorn.conf.py  manage.py
roompricegenie/dashboard_service/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
roompricegenie/dashboard_service/migrations/: 0001_initial.py  0002_dashboarddata_cancellation_count_and_more.py  0003_remove_dashboarddata_cancellation_count.py  0004_alter_dashboarddata_unique_together_and_more.py
roompricegenie/dashboard_service/tests/: test_models.py  test_serializers.py  test_tasks.py  test_views.py
roompricegenie/data_provider/: models.py  serializers.py  tasks.py  urls.py  views.py
roompricegenie/data_provider/data/: data_1.csv  invalid_rows.csv
roompricegenie/roompricegenie/: __init__.py  asgi.py  celery.py  routers.py  settings.py  urls.py  views.py  wsgi.py
roompricegenie/templates/: api_root.html
(+9 files in other folders)
