[tool.poetry]
name = "Django Price Manager"
version = "0.1.0"
description = "Booking curve analysis for Sjango Price Manager"
authors = ["Kenan Agyel <kenanagyel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
Django = "^5.0.7"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
redis = "^5.0.8"
pandas = "^2.2.2"
setuptools = "^72.1.0"
gunicorn = "^22.0.0"
drf-yasg = "^1.21.7"
requests-mock = "^1.12.1"
python-dotenv = "^1.0.1"
whitenoise = "^6.7.0"
flower = "^2.0.1"
pre-commit = "^3.8.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^24.8.0"
mypy = "^1.11.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
